--- a/Pizarrones/01_numpy.ipynb
+++ b/Pizarrones/01_numpy.ipynb
@@ -229,9 +229,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8341db5e",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "996a22ca",
    "metadata": {},
+   "outputs": [],
    "source": [
     "A = [[1, 2, 3],\n",
     "     [4, 5, 6],\n",
@@ -660,6 +662,33 @@
     "print(\"\\nSeno de x:\", np.sin(x))\n",
     "print(\"\\nSeno de x:\", np.round(np.sin(x), 2))\n",
     "print(\"\\nExponencial:\", np.exp([1, 2, 3]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c2c59b6",
+   "metadata": {},
+   "source": [
+    "## + Operaciones con matrices e inversa de una matriz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c571507e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.array([[2,1],[5,3]])\n",
+    "\n",
+    "A_inv = np.linalg.inv(A)   \n",
+    "print('Inversa de una matriz\\n',A_inv)\n",
+    "\n",
+    "detA= np.linalg.det(A)\n",
+    "print('Determinante de una matriz\\n',A_inv)\n",
+    "\n",
+    "A_inv_int = A_inv.astype(int)\n",
+    "print('Convertir a enteros (solo si son valores exactos)',A_inv_int)\n"
    ]
   },
   {
