--- a/Clases Teóricas/Resumen/02_builtins.ipynb
+++ b/Clases Teóricas/Resumen/02_builtins.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "# Funciones Built-in (A–Z) — Cuadro completo\n",
     "\n",
-    "> Formato pensado para estudio rápido. **VS Code** renderiza la tabla perfecto.\n",
+    "\n",
     "\n",
     "| Función | ¿Qué hace? | Sintaxis | Ejemplo | Salida esperada |\n",
     "|---|---|---|---|---|\n",
@@ -86,7 +86,11 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
